# routes/web.php
@@ -21,6 +21,7 @@ use App\Http\Controllers\Admin\PartnersController;
 use App\Http\Controllers\Admin\OrganizationsController;
 use App\Http\Controllers\Admin\PressPagesController;
 use App\Http\Controllers\Admin\LocalPagesController;
+use App\Http\Controllers\Admin\OldDocumentsController;
 /*
 |--------------------------------------------------------------------------
 | Web Routes
@@ -83,6 +84,7 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
     Route::resource('organizations', OrganizationsController::class);
     Route::resource('press-pages', PressPagesController::class);
     Route::resource('local-pages', LocalPagesController::class);
+    Route::resource('old-documents', OldDocumentsController::class);
 
     Route::resource('settings', 'App\Http\Controllers\Admin\SettingsController');
     Route::get('generator', ['uses' => '\Appzcoder\LaravelAdmin\Controllers\ProcessController@getGenerator'])->name('generator');
@@ -91,3 +93,5 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
 });
 
 require __DIR__.'/auth.php';
+
+
